# review-bot

./: .gitignore  README.md  VIBE_REPORT.md  pyproject.toml
backend/: .env.example  README.md  justfile  pyproject.toml
backend/src/: approval_main.py  main.py  models.py
backend/src/approval_agent/: agent.py
backend/src/github/: client.py
backend/src/review_agent/: agent.py
backend/tests/: test_approval_agent.py  test_models.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/prs/: route.ts
dashboard/src/app/api/prs/[number]/: route.ts
dashboard/src/app/pr/[number]/: page.tsx
dashboard/src/components/: finding-card.tsx  poller.tsx  pr-table.tsx  review-summary.tsx  status-badge.tsx  timeline.tsx
dashboard/src/lib/: github.ts
prompts/: review_system.md
scripts/: simulate_review.py
src/: main.py
src/approval_agent/: agent.py
src/github/: client.py
src/review_agent/: agent.py
tests/: test_approval_agent.py  test_review_agent.py
